Fix soundtrack page being clipped by menu bar. Also more cleanup.

--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,13 @@
 /* CHAT ------------------------------------------------------------------------------------------------------------- */
 
+/* CHAT LOADING */
+._21nVi2jNuF_prxLY1mAaKK,
+._2wAKy-0ZkO_vhbiQCP9MgE ._21nVi2jNuF_prxLY1mAaKK {
+  color: var(--zehn-color-accent-100) !important;
+  font-size: var(--zehn-size-14) !important;
+  font-weight: var(--zehn-size-weight-normal) !important;
+}
+
 /* BORDER */
 .multiChatDialog {
   /* border: var(--zehn-size-border) solid var(--zehn-color-border) !important; */
