--- a/css/friends.css
+++ b/css/friends.css
@@ -2152,6 +2152,22 @@ body.in_global_drag .quickAccessFriends.emptyQuickAccess {
   font-size: var(--zehn-size-16) !important;
 }
 
+/* AVATAR INITIALS */
+* .ChatRoomGroupAvatar_initials {
+  color: var(--zehn-color-text-primary) !important;
+  background: transparent !important;
+  font-weight: var(--zehn-size-weight-normal) !important;
+  background-image: none !important;
+  -webkit-text-fill-color: var(--zehn-color-text-primary) !important;
+  font-size: 1em !important;
+  width: 100% !important;
+  height: 100% !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  border: none !important;
+}
+
+/* GROUP NAME */
 .groupNameStatusContainer {
   padding-left: 0 !important;
   margin-left: 12px !important;
