--- a/css/library.css
+++ b/css/library.css
@@ -12191,6 +12191,10 @@ button.DialogButton._3Cdin80d-hVsakHUZboheb._3nJyYxGQ3kdwwabPmxNnMe {
   padding: var(--zehn-size-navbar-height) 0 0 0 !important;
 }
 
+._3mz8wQ6Q44B8P7pzPP4Iyw:has(.zehnMenuOpened) ._1c7FWVusLDkD_Lv6ZB0uTY {
+  padding: calc(var(--zehn-size-navbar-height) + var(--zehn-menu-height)) 0 0 0 !important;
+}
+
 ._23zCI_59RJTWRvY-_YCFb9 {
   background: transparent !important;
   overflow: hidden !important;
@@ -12198,6 +12202,10 @@ button.DialogButton._3Cdin80d-hVsakHUZboheb._3nJyYxGQ3kdwwabPmxNnMe {
 
 ._26bNl_GrQVxUbLj1KjGJQN {
   padding: var(--zehn-size-navbar-height) 0 0 0 !important;
+}
+
+._3mz8wQ6Q44B8P7pzPP4Iyw:has(.zehnMenuOpened) ._26bNl_GrQVxUbLj1KjGJQN {
+  padding: calc(var(--zehn-size-navbar-height) + var(--zehn-menu-height)) 0 0 0 !important;
 }
 
 ._26bNl_GrQVxUbLj1KjGJQN ._3JZ9bzoPhr9prUKdYatsP1 {
