--- a/css/plugins.css
+++ b/css/plugins.css
@@ -65,7 +65,7 @@
 .steam-hunters-achievements-page .achievements-header .header-bottom-row .filter-group {
   color: var(--zehn-color-text-primary) !important;
   font-weight: var(--zehn-size-weight-normal) !important;
-  font-size: var(--zehn-size-text-settings-control) !important;
+  font-size: var(--zehn-size-text-control) !important;
   gap: var(--zehn-size-gap-button) !important;
   justify-content: flex-end !important;
   flex: 2 !important;
@@ -120,7 +120,7 @@
   order: 0 !important;
   color: var(--zehn-color-text-primary) !important;
   font-weight: var(--zehn-size-weight-normal) !important;
-  font-size: var(--zehn-size-text-settings-control) !important;
+  font-size: var(--zehn-size-text-control) !important;
 }
 
 /* ACHIEVEMENTS LIST */
