--- a/css/popup.css
+++ b/css/popup.css
@@ -813,7 +813,7 @@ form:has(.zhaKeChn9HPNSMtk0ami_) {
 
 .mediumName {
   color: var(--zehn-color-text-primary) !important;
-  font-size: var(--zehn-size-text-settings-section-header) !important;
+  font-size: var(--zehn-size-text-section-header) !important;
 }
 
 .friend.editNickname.nickNamed.ingame .labelHolder .mediumName:not(.asNickName) {
