--- a/css/settings.css
+++ b/css/settings.css
@@ -3980,20 +3980,6 @@ div[role="radiogroup"] {
   margin-bottom: 0 !important;
 }
 
-.DialogToggle_Description {
-  color: var(--zehn-color-text-secondary) !important;
-  font-weight: var(--zehn-size-weight-normal) !important;
-  font-size: var(--zehn-size-14) !important;
-  padding-top: 0 !important;
-  line-height: 22px !important;
-}
-
-.VwcCoDMU0ROCpRAJ_cXTx ._2C3-Rj_GA3KP7GklMymoPM .DialogToggle_Description {
-  color: var(--zehn-color-text-primary) !important;
-  line-height: 32px !important;
-  padding: 0 8px !important;
-}
-
 .VwcCoDMU0ROCpRAJ_cXTx ._3XBggeqHxK4fIrbu_ULi1y {
   margin-top: 0 !important;
   width: 32px !important;
@@ -4188,14 +4174,6 @@ div[role="radiogroup"] {
 }
 
 /* CHAT */
-.DialogToggle_Description {
-  color: var(--zehn-color-text-secondary) !important;
-  font-size: var(--zehn-size-14) !important;
-  font-weight: var(--zehn-size-weight-normal) !important;
-  padding-top: 0 !important;
-  padding-bottom: 8px !important;
-}
-
 .FriendSettingsContainer .SettingsGroup>._DialogInputContainer._DialogLayout:not(.DialogToggleField) {
   outline: unset !important;
   padding: 0 !important;
