--- a/css/variables.css
+++ b/css/variables.css
@@ -1378,12 +1378,14 @@
   --zehn-size-progressbar-thick: 8px;
   --zehn-size-progressbar-radius: var(--zehn-size-radius-square);
 
-  /* SETTINGS TEXT*/
-  --zehn-size-text-settings-page-header: 28px;
-  --zehn-size-text-settings-section-header: 20px;
-  --zehn-size-text-settings-label: 14px;
-  --zehn-size-text-settings-description: 14px;
-  --zehn-size-text-settings-control: 14px;
+  /* TEXT*/
+  --zehn-size-text-page-title: 12px;
+  --zehn-size-text-page-header: 28px;
+  --zehn-size-text-section-header: 20px;
+  --zehn-size-text-body: 14px;
+  --zehn-size-text-label: 14px;
+  --zehn-size-text-description: 14px;
+  --zehn-size-text-control: 14px;
 
   /* TAGS */
   --zehn-size-tag: 24px;
